crates/aptos-rust-sdk-v2-macros/tests/ui/fail/move_struct_invalid_attr.stderr
error: Unknown attribute 'invalid_attr'. Expected 'address', 'module', or 'name'
 --> tests/ui/fail/move_struct_invalid_attr.rs:7:32
  |
7 | #[move_struct(address = "0x1", invalid_attr = "value")]
  |                                ^^^^^^^^^^^^
